Fixes vertical layout issues once for all.
CSS, my love.

--- a/webapp/src/app/app-shell/app-shell.component.scss
+++ b/webapp/src/app/app-shell/app-shell.component.scss
@@ -1,7 +1,13 @@
 :host {
   display: block;
 }
+
 .flex {
   height: 100%;
-  padding-top: 160px;
+}
+
+.vertical-center {
+  height: 100%;
+  align-items: center;
+  text-align: center;
 }
